--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,3 +1,12 @@
 body{
     background-color: white;
 }
+
+header{
+    background-color: #3B3941;
+}
+
+ul{
+    display: flex;
+    align-items: center;
+}
