--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -4,6 +4,9 @@ body{
 
 header{
     background-color: #3B3941;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 ul{
