--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -4,12 +4,17 @@ body{
 
 header{
     background-color: #3B3941;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+   
+}
+nav a{
+    display: inline-block;
+    margin: 0 15px;
+    padding: 10px 0;
+    text-decoration: none;
+    color: #CFA30D;
+    font-weight: bold;
+    font-size: 1.5rem;
+    transition: color 0.3 ease;
 }
 
-ul{
-    display: flex;
-    align-items: center;
-}
+
