--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -14,7 +14,10 @@ nav a{
     color: #CFA30D;
     font-weight: bold;
     font-size: 1.5rem;
-    transition: color 0.3 ease;
+    transition: all 0.3 ease;
+}
+nav a:hover{
+    color: white
 }
 
 
