ga img en id og stylet med id på css

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,10 +1,11 @@
 body{
     background-color: white;
 }
-h1 img{
+#header-logo{
     text-align: left;
     margin-left: 15px;
     margin-top: 15px;
+
 }
 header{
     background-color: #3B3941;
