--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -5,7 +5,7 @@ body{
     text-align: left;
     margin-left: 15px;
     margin-top: 15px;
-
+    max-width: 100px;
 }
 header{
     background-color: #3B3941;
