--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,12 +1,17 @@
 body{
     background-color: white;
+    margin: 0%;
+    padding: 0%;
 }
 h1 img{
     text-align: left;
-    margin-left: 15px;
-    margin-top: 15px;
 }
+
 header{
+    margin: 0;
+    padding: 5px;
+    width: 100%;
+    box-sizing: border-box;
     background-color: #3B3941;
    
 }
@@ -18,6 +23,7 @@ nav a{
     color: #CFA30D;
     font-weight: bold;
     font-size: 1.5rem;
+    font-family:sans-serif
     transition: all 0.3 ease;
 }
 nav a:hover{
