--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,17 +1,20 @@
-body{
+body {
     background-color: white;
 }
-#header-logo{
+
+#header-logo {
     text-align: left;
     margin-left: 15px;
     margin-top: 15px;
     max-width: 100px;
 }
-header{
+
+header {
     background-color: #3B3941;
-   
+
 }
-nav a{
+
+nav a {
     display: inline-block;
     margin: 0 15px;
     padding: 10px 0;
@@ -21,8 +24,7 @@ nav a{
     font-size: 1.5rem;
     transition: all 0.3 ease;
 }
-nav a:hover{
-    color: white
+
+nav a:hover {
+    color: #f1d26b;
 }
-
-
