--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,21 +1,23 @@
-body{
+body {
     background-color: white;
     margin: 0%;
     padding: 0%;
 }
-h1 img{
+
+h1 img {
     text-align: left;
 }
 
-header{
+header {
     margin: 0;
     padding: 5px;
     width: 100%;
     box-sizing: border-box;
     background-color: #3B3941;
-   
+
 }
-nav a{
+
+nav a {
     display: inline-block;
     margin: 0 15px;
     padding: 10px 0;
@@ -23,11 +25,9 @@ nav a{
     color: #CFA30D;
     font-weight: bold;
     font-size: 1.5rem;
-    font-family:sans-serif
-    transition: all 0.3 ease;
-}
-nav a:hover{
-    color: white
+    font-family: sans-serif transition: all 0.3 ease;
 }
 
-
+nav a:hover {
+    color: #CFA30D;
+}
