Endringer på h1 og h2 i body

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,21 +1,22 @@
-body{
+body {
     background-color: white;
     margin: 0%;
     padding: 0%;
 }
-h1 img{
+
+#header-logo {
     text-align: left;
+    margin-left: 15px;
+    margin-top: 15px;
+    max-width: 100px;
 }
 
-header{
-    margin: 0;
-    padding: 5px;
-    width: 100%;
-    box-sizing: border-box;
+header {
     background-color: #3B3941;
-   
+
 }
-nav a{
+
+nav a {
     display: inline-block;
     margin: 0 15px;
     padding: 10px 0;
@@ -23,11 +24,17 @@ nav a{
     color: #CFA30D;
     font-weight: bold;
     font-size: 1.5rem;
-    font-family:sans-serif
+    font-family:sans-serif;
     transition: all 0.3 ease;
 }
-nav a:hover{
-    color: white
+
+nav a:hover {
+    color: #fccb2a;
 }
-
-
+body h1{
+    margin-left: 20px;
+    font-size: 40px;
+}
+body h2{
+    margin-left: 20px;
+}
