--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,4 +1,9 @@
+html{
+    font-family:sans-serif;
+}
+
 body {
+    margin-left: 10%;
     background-color: white;
     margin: 0%;
     padding: 0%;
@@ -24,7 +29,6 @@ nav a {
     color: #CFA30D;
     font-weight: bold;
     font-size: 1.5rem;
-    font-family:sans-serif;
     transition: all 0.3 ease;
 }
 
