adjustments to header/nav

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -3,9 +3,8 @@ html{
 }
 
 body {
-    margin-left: 10%;
+    margin-left: 100px;
     background-color: white;
-    margin: 0%;
     padding: 0%;
 }
 
@@ -18,13 +17,13 @@ body {
 
 header {
     background-color: #3B3941;
-
+    margin-left: -100px;
 }
 
 nav a {
     display: inline-block;
     margin: 0 15px;
-    padding: 10px 0;
+    padding: 50px 0;
     text-decoration: none;
     color: #CFA30D;
     font-weight: bold;
