--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,11 +1,6 @@
-html{
-    font-family:sans-serif;
-}
-
 body {
-    /* må gjøre scalable, ikke px på margin, skal fikses */
-    margin-left: 300px;
     background-color: white;
+    margin: 0%;
     padding: 0%;
 }
 
@@ -18,31 +13,42 @@ body {
 
 header {
     background-color: #3B3941;
-    margin-left: -300px;
-    /* må gjøre scalable, ikke px på margin, skal fikses */
 }
 
 nav a {
     display: inline-block;
     margin: 0 15px;
-    padding: 25px 0;
+    padding: 10px 0;
     text-decoration: none;
     color: #CFA30D;
     font-weight: bold;
     font-size: 1.5rem;
+    font-family: sans-serif;
     transition: all 0.3 ease;
 }
-article{
-    margin-top: 75px;
-}
-
 nav a:hover {
-    color: #fccb2a;
+    color: #cbae4e;
 }
-body h1{
-    margin-left: 20px;
-    font-size: 40px;
-}
-body h2{
-    margin-left: 20px;
+body {
+     h1{
+        font-size: 40px;
+    }
+    h2{
+    }
+    article{
+        margin-left: 20px;
+    }
+    article section div {
+        margin-left: 10px;
+        border: 1px solid #ddd;
+        padding: 10px;
+        border-radius: 5px;
+        width: 200px
+
+
+    }
+    article section div:hover{
+        background-color: lightgray;
+        border-color: #3B3941;
+    }
 }
