--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,3 +1,7 @@
+html{
+    font-family: sans-serif;
+}
+
 body {
     background-color: white;
     margin: 0%;
@@ -23,7 +27,6 @@ nav a {
     color: #CFA30D;
     font-weight: bold;
     font-size: 1.5rem;
-    font-family: sans-serif;
     transition: all 0.3 ease;
 }
 nav a:hover {
