--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,4 +1,4 @@
-html{
+html {
     font-family: sans-serif;
 }
 
@@ -13,10 +13,13 @@ body {
     margin-left: 15px;
     margin-top: 15px;
     max-width: 100px;
+    min-width: 15mm;
 }
 
-#course-info{
+#course-info {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 header {
@@ -33,29 +36,29 @@ nav a {
     font-size: 1.5rem;
     transition: all 0.3 ease;
 }
+
 nav a:hover {
     color: #cbae4e;
 }
-body {
-     h1{
-        font-size: 40px;
-    }
-    h2{
-    }
-    article{
-        margin-left: 20px;
-    }
-    article section div {
-        margin-left: 10px;
-        border: 1px solid #ddd;
-        padding: 10px;
-        border-radius: 5px;
-        width: 200px
 
+h1 {
+    font-size: 40px;
+}
 
-    }
-    article section div:hover{
-        background-color: lightgray;
-        border-color: #3B3941;
-    }
+#main-content {
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+#course-info div {
+    margin: 0.6%;
+    border: 1px solid #ddd;
+    padding: 10px ;
+    border-radius: 5px;
+    width: 200px
+}
+
+#course-info div:hover {
+    background-color: lightgray;
+    border-color: #3B3941;
 }
