--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -34,11 +34,11 @@ nav a {
     color: #CFA30D;
     font-weight: bold;
     font-size: 1.5rem;
-    transition: all 0.3 ease;
+    transition: color 0.3s ease;
 }
 
 nav a:hover {
-    color: #cbae4e;
+    color: #f5d468;
 }
 
 h1 {
@@ -53,10 +53,12 @@ h1 {
 #course-info div {
     margin: 0.6%;
     border: 1px solid #ddd;
-    padding: 10px ;
+    padding: 10px;
     border-radius: 5px;
-    width: 200px
+    width: 200px;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
 }
+
 
 #course-info div:hover {
     background-color: lightgray;
