--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -26,7 +26,7 @@ header {
     background-color: #3B3941;
 }
 
-nav a {
+nav ul a {
     display: inline-block;
     margin: 0 15px;
     padding: 10px 0;
@@ -34,11 +34,11 @@ nav a {
     color: #CFA30D;
     font-weight: bold;
     font-size: 1.5rem;
-    transition: color 0.3s ease;
 }
 
 nav a:hover {
     color: #f5d468;
+    transition: color 0.3s ease;
 }
 
 h1 {
@@ -56,11 +56,11 @@ h1 {
     padding: 10px;
     border-radius: 5px;
     width: 200px;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
 
 #course-info div:hover {
     background-color: lightgray;
     border-color: #3B3941;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
 }
