--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -12,33 +12,54 @@ body {
     text-align: left;
     margin-left: 15px;
     margin-top: 15px;
-    max-width: 100px;
+    max-width: 75px;
     min-width: 15mm;
 }
 
-#course-info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.img-container{
+    padding: 0 15%;
 }
 
 header {
     background-color: #3B3941;
 }
 
-nav ul a {
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0 15%;
+    max-width: 50%;
+}
+
+.nav-links li {
+    display: inline;
+    padding: 15px;
+    background-color: #00000022;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+.nav-links li:hover {
+    background-color: #ffffff13;
+}
+
+.nav-links a {
     display: inline-block;
-    margin: 0 15px;
-    padding: 10px 0;
+    margin: 0 10px;
     text-decoration: none;
     color: #CFA30D;
     font-weight: bold;
     font-size: 1.5rem;
-    transition: color 0.3s ease;
-}
-
-nav a:hover {
-    color: #f5d468;
 }
 
 h1 {
@@ -50,11 +71,17 @@ h1 {
     margin-right: 15%;
 }
 
+#course-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 #course-info div {
     margin: 0.6%;
     border: 1px solid #ddd;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 10px;
     width: 200px;
     transition: background-color 0.3s ease, border-color 0.3s ease;
 }
