--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -96,3 +96,76 @@ h1 {
     background-color: rgba(211, 211, 211, 0.237);
     border-color: #3b39417a;
 }
+
+/**********************************/
+/*		 Styling Footer	 */
+/**********************************/
+
+/*** Adding Styles to Company Details ***/
+.moreInfo{
+	overflow: hidden;
+	padding: 3em 0em;
+	background: #00000022;
+	text-align: center;
+	margin-top: 5em;
+}
+
+#footer #col1,
+#footer #col2,
+#footer #col3{
+	float: left;
+	width: 320px;
+	padding: 0px 40px 0px 40px;
+}
+	
+#footer #icon{
+	display: block;
+	margin-bottom: 1em;
+	font-size: 3em;
+}
+
+/*** Adding Styles to Copyright Div ***/
+.mediabox
+{
+	overflow: hidden;
+	padding: 3em 0em;
+	border-top: 20px solid rgba(255, 255, 255, 0.08);
+	text-align: center;
+	background: #3B3941;
+}
+	
+.mediabox p
+{
+	letter-spacing: 1px;
+	font-size: 0.90em;
+	color: rgba(255, 255, 255, 0.6);
+}
+	
+.mediabox a
+{
+	text-decoration: none;
+	color: rgba(255, 255, 255, 0.8);
+}
+
+/* Styling Social Icons */
+ul.media{
+	margin: 0;
+	padding: 2em 0em 0em 0em;
+	list-style: none;
+}
+	
+ul.media li{
+	display: inline-block;
+	padding: 0em 0.10em;
+	font-size: 1em;
+}
+
+ul.media li a{
+	color: #FFF;
+	display: inline-block;
+	background: rgba(12, 12, 12, 0.6);
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+}
