--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -116,12 +116,15 @@ h1 {
 	margin-top: 5em;
 }
 
+#footer .row {
+    display: inline-block; 
+}
 #footer #col1,
 #footer #col2,
 #footer #col3{
 	float: left;
 	width: 320px;
-	padding: 0px 40px 0px 40px;
+	padding: 40px 40px 0px 40px;
 }
 	
 #footer #icon{
