--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -124,87 +124,87 @@ h2 {
 /**********************************/
 
 /*** Adding Styles to Company Details ***/
-.moreInfo{
-	overflow: hidden;
-	padding: 3em 0em;
-	background: #00000022;
-	text-align: center;
-	margin-top: 5em;
-    min-height: 450px;
+.moreInfo {
+    overflow: hidden;
+    padding: 3em 0em;
+    background: #00000022;
+    text-align: center;
+    margin-top: 5em;
+    min-height: 650px;
 }
 
 #footer .row {
-    display: inline-block; 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
+
 #footer #col1,
 #footer #col2,
-#footer #col3{
-	float: left;
-	width: 320px;
-	padding: 40px 40px 0px 40px;
+#footer #col3 {
+    float: left;
+    width: 320px;
+    padding: 40px 40px 0px 40px;
 }
-	
-#footer #icon{
-	display: block;
-	margin-bottom: 1em;
-	font-size: 3em;
+
+#footer #icon {
+    display: block;
+    margin-bottom: 1em;
+    font-size: 3em;
 }
 
 /*** Adding Styles to Copyright Div ***/
-.mediabox
-{
-	overflow: hidden;
-	padding: 3em 0em;
-	border-top: 20px solid rgba(255, 255, 255, 0.08);
-	text-align: center;
-	background: #3B3941;
+.mediabox {
+    overflow: hidden;
+    padding: 3em 0em;
+    border-top: 20px solid rgba(255, 255, 255, 0.08);
+    text-align: center;
+    background: #3B3941;
 }
-	
-.mediabox p
-{
-	letter-spacing: 1px;
-	font-size: 0.90em;
-	color: rgba(255, 255, 255, 0.6);
+
+.mediabox p {
+    letter-spacing: 1px;
+    font-size: 0.90em;
+    color: rgba(255, 255, 255, 0.6);
 }
-	
-.mediabox a
-{
-	text-decoration: none;
-	color: rgba(255, 255, 255, 0.8);
+
+.mediabox a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.8);
 }
 
 /* Styling Social Icons */
-ul.media{
-	margin: 0;
-	padding: 2em 0em 0em 0em;
-	list-style: none;
-}
-	
-ul.media li{
-	display: inline-block;
-	padding: 0em 0.10em;
-	font-size: 1em;
+ul.media {
+    margin: 0;
+    padding: 2em 0em 0em 0em;
+    list-style: none;
 }
 
-ul.media li a{
-	color: #FFF;
-	display: inline-block;
-	background: rgba(12, 12, 12, 0.6);
-	width: 40px;
-	height: 40px;
-	line-height: 40px;
-	text-align: center;
+ul.media li {
+    display: inline-block;
+    padding: 0em 0.10em;
+    font-size: 1em;
 }
 
-.more-info-links{
+ul.media li a {
+    color: #FFF;
+    display: inline-block;
+    background: rgba(12, 12, 12, 0.6);
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+}
+
+.more-info-links {
+    display: block;
     text-decoration: none;
     color: black;
     transition: color 0.3s ease, font-size 0.3s ease;
-    
 }
 
-.more-info-links:hover{
+.more-info-links:hover {
     text-decoration: underline;
-    color:#49a7ff;
+    color: #49a7ff;
     font-size: larger;
 }
