--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -128,7 +128,7 @@ h2 {
     min-height: 650px;
 }
 
-#footer .row {
+#footer .footer-info {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -139,7 +139,7 @@ h2 {
 #footer #col3 {
     float: left;
     width: 320px;
-    padding: 40px 40px 0px 40px;
+    padding: 40px 40px 40px 40px;
 }
 
 #footer #icon {
@@ -148,13 +148,12 @@ h2 {
     font-size: 3em;
 }
 
-.mediabox
-{
-	overflow: hidden;
-	padding: 3em 0em;
-	border-top: 20px solid rgba(255, 255, 255, 0.08);
-	text-align: center;
-	background: #3B3941;
+.mediabox {
+    overflow: hidden;
+    padding: 3em 0em;
+    border-top: 20px solid rgba(255, 255, 255, 0.08);
+    text-align: center;
+    background: #3B3941;
 }
 
 .mediabox p {
@@ -177,7 +176,7 @@ ul.media {
 
 ul.media li {
     display: inline-block;
-    padding: 0em 0.10em;
+    padding: 0 1.5%;
     font-size: 2em;
 }
 
