--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -215,7 +215,7 @@ ul.media li a {
 
 .more-info-links:hover {
     text-decoration: underline;
-    color: #49a7ff;
+    text-decoration-color: #CFA30D;
     font-size: larger;
 }
 
