--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -36,21 +36,21 @@ header {
     padding: 10px;
 }
 
-/* header ----------------------------------------------- */
-
 /* Video ------------------------------------------------------------*/
-
-.video-container{
+.video-container {
     position: relative;
-    height: 600px;
-    left:0;
-    top: 10px;
-    width: 100%;
+    padding-bottom: 42.1875%;
+    /* 16:9 aspect ratio */
+    height: 0;
     overflow: hidden;
-
+    max-width: 75%;
+    margin: 0 auto;
 }
 
 iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     border: none;
@@ -246,10 +246,12 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 /* Style the tab */
 .tab {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
+    width: auto;
 }
 
 /* Style the buttons inside the tab */
