--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -102,14 +102,14 @@ h1 {
     font-size: 40px;
 }
 
-h2 {
-    font-weight: 100;
-}
-
 #main-content {
     margin-left: 10%;
     margin-right: 10%;
     padding-top: 50px;
+}
+
+#main-content > h2 {
+    font-weight: 100
 }
 
 #course-key-points {
@@ -352,6 +352,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     max-width: 60%;
     /* margin: auto; */
     padding: 50px 0;
+    font-weight: 100;
 }
 
 .course-info-links{
