--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -99,7 +99,7 @@ nav {
     font-size: 1.5rem;
 }
 
-/* main-content ----------------------------------------------------- */
+/* main ----------------------------------------------------- */
 h1 {
     font-size: 40px;
 }
@@ -108,7 +108,7 @@ h2 {
     font-weight: 100;
 }
 
-#main-content {
+#main {
     margin-left: 10%;
     margin-right: 10%;
     padding-top: 50px;
@@ -130,10 +130,17 @@ h2 {
     transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
-#course-key-points div:hover {
+.main-content{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+
+
+/* #course-key-points div:hover {
     background-color: rgba(211, 211, 211, 0.237);
     border-color: #3b39417a;
-}
+} */
 
 #course-info {
     width: 100%;
