--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -8,10 +8,6 @@ body {
     padding: 0%;
 }
 
-.general-spacer {
-    height: 30px;
-}
-
 hr {
     margin: 75px 0;
 }
@@ -48,6 +44,7 @@ header {
     margin: 0 auto;
     border-radius: 30px;
     border: 1px;
+    margin-top: 50px;
 }
 
 iframe {
@@ -108,10 +105,15 @@ h2 {
     font-weight: 100;
 }
 
-#main-content {
+#main {
     margin-left: 10%;
     margin-right: 10%;
     padding-top: 50px;
+}
+
+#main-content{
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 #main-content > h2 {
@@ -323,7 +325,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
-    width: 60%;
+    width: 70%;
     margin: auto;
     min-width: 285px;
 }
@@ -339,7 +341,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     transition: 0.3s;
     font-size: 17px;
     border-radius: 10px;
-    margin: 0 1px;
+    margin: 1px;
 }
 
 /* Change background color of buttons on hover */
@@ -351,6 +353,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 /* Create an active/current tablink class */
 .tab button.active {
     background-color: #ffd500;
+    padding: 14px 20px;
 }
 
 /* Style the tab content */
@@ -362,7 +365,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     animation: fadeEffect 1s;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    width: 50%;
+    width: 60%;
     margin: auto;
     border: 1px solid #f1f1f1;
     min-width: 250px;
