--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -8,14 +8,20 @@ body {
     padding: 0%;
 }
 
-hr {
+#separator {
     margin: 75px 0;
+}
+
+hr{
+    margin: 0px;
 }
 
 
 /* header ------------------------------------- */
 header {
     background-color: #3B3941;
+    box-shadow: 0px 6px 16px 0px rgba(0,0,0,0.2);
+
 }
 
 #header-logo {
@@ -36,10 +42,10 @@ header {
 /* from w3school */
 /* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_dropdown_right */
 .dropbtn {
-    background-color: #ffd500;
-    color: rgb(0, 0, 0);
-    padding: 16px;
-    font-size: 25px;
+    background-color: #3B3941;
+    color: #ffd500;
+    padding: 20x;
+    font-size: 35px;
     border: none;
     cursor: pointer;
     width: 60px;
@@ -56,20 +62,25 @@ header {
     position: absolute;
     right: 0;
     background-color: #ffd500;
-    min-width: 160px;
+    min-width: 250px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    font-size: larger;
   }
   
   .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 16px 16px;
     text-decoration: none;
     display: block;
-    transition: 0.2s ease;
+    transition: 0.2s background-color ease;
+    border-top: 1px solid rgb(92, 92, 92);
   }
   
-  .dropdown-content a:hover {background-color: #fff6cb;}
+  .dropdown-content a:hover {
+    background-color: #fff6cb;
+
+}
   .dropdown:hover .dropdown-content {display: block;}
 
 /* Video ------------------------------------------------------------*/
@@ -82,8 +93,8 @@ header {
     height: 0;
     overflow: hidden;
     margin: 0 auto;
-    border-radius: 30px;
-    border: 1px;
+    border-radius: 40px;
+    border: 5px solid #ffd500;
     margin-top: 50px;
 }
 
