--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -12,15 +12,34 @@ body {
     margin: 75px 0;
 }
 
-hr{
+hr {
     margin: 0px;
 }
 
+h1 {
+    font-size: 40px;
+}
+
+/* h2 {
+    font-weight: 33.28px;
+}
+
+h3 {
+    font-size: 27.69px;
+}
+
+h4 {
+    font-size: 23.04px;
+}
+
+h5 {
+    font-size: 19.17px;
+} */
 
 /* header ------------------------------------- */
 header {
     background-color: #3B3941;
-    box-shadow: 0px 6px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.2);
 
 }
 
@@ -50,38 +69,41 @@ header {
     cursor: pointer;
     width: 60px;
     height: 60px;
-  }
-  
-  .dropdown {
+}
+
+.dropdown {
     position: relative;
     display: inline-block;
-  }
-  
-  .dropdown-content {
+}
+
+.dropdown-content {
     display: none;
     position: absolute;
     right: 0;
     background-color: #ffd500;
     min-width: 250px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     font-size: larger;
-  }
-  
-  .dropdown-content a {
+}
+
+.dropdown-content a {
     color: black;
     padding: 16px 16px;
     text-decoration: none;
     display: block;
     transition: 0.2s background-color ease;
     border-top: 1px solid rgb(92, 92, 92);
-  }
-  
-  .dropdown-content a:hover {
+}
+
+.dropdown-content a:hover {
     background-color: #fff6cb;
 
 }
-  .dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
 /* Video ------------------------------------------------------------*/
 .video-container {
@@ -93,9 +115,10 @@ header {
     height: 0;
     overflow: hidden;
     margin: 0 auto;
-    border-radius: 40px;
+    border-radius: 30px;
     border: 5px solid #ffd500;
     margin-top: 50px;
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.112);
 }
 
 iframe {
@@ -149,13 +172,6 @@ nav {
 }
 
 /* main ----------------------------------------------------- */
-h1 {
-    font-size: 40px;
-}
-
-h2 {
-    font-weight: 100;
-}
 
 #main {
     margin-left: 10%;
@@ -163,13 +179,13 @@ h2 {
     padding-top: 50px;
 }
 
-#main-content{
+#main-content {
     margin-left: 10%;
     margin-right: 10%;
 }
 
-#main-content > h2 {
-    font-weight: 100
+#main-content>h2 {
+    font-weight: 100;
 }
 
 #course-key-points {
@@ -185,15 +201,12 @@ h2 {
     border: 1px solid #ddd;
     padding: 10px;
     border-radius: 10px;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
-.main-content{
+.main-content {
     margin-left: 10%;
     margin-right: 10%;
 }
-
-
 
 /* #course-key-points div:hover {
     background-color: rgba(211, 211, 211, 0.237);
@@ -209,13 +222,16 @@ h2 {
     text-decoration: none;
     color: black;
     font-size: larger;
-}
-
-#more-content a:hover {
     text-decoration: underline;
     text-decoration-color: #ffd500;
     text-decoration-thickness: 2px;
 }
+
+#more-content a:hover {
+
+    text-decoration-thickness: 3px;
+}
+
 #course-summary {
     min-width: 285px;
     max-width: 60%;
@@ -230,21 +246,27 @@ h2 {
     padding-left: 10px;
     display: inline-block;
 }
-.divider{
+
+.divider {
     display: inline;
     font-weight: 100;
 }
 
 #img-krhel3944 {
     max-width: 100px;
+    border-radius: 5px;
+    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.267);
+
 }
 
-#studies{
+#studies {
     border-collapse: collapse;
     width: 75%;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.164);
 }
+
 #studies th {
     text-decoration: none;
     border: 2px solid black;
@@ -253,40 +275,54 @@ h2 {
     height: 30px;
     overflow: hidden;
     font-weight: bolder;
-    background-color: #ffd500;
-
+    background-color: #ffd500d3;
 }
-.header-row, .row-link {
+
+.header-row,
+.row-link {
     display: flex;
     text-decoration: none;
     color: inherit;
 }
 
-.header-row span, .row-link span {
+.header-row span,
+.row-link span {
     flex: 1;
     padding: 5px;
-    border-right: 1px solid #ddd;
+    border-right: 1px solid #a7a7a7;
 }
 
-.header-row, .row-link span:last-child {
+.header-row,
+.row-link span:last-child {
     border-right: none;
 }
+
 #studies td {
     border: 1px solid black;
     padding: 10px;
     text-align: center;
     height: 40px;
     overflow: hidden;
+    transition: 0.3s height ease;
 }
-#studies td a{
+
+#studies td a {
     text-decoration: none;
     color: black;
 }
+
 #studies tr:nth-child(even) {
     background-color: #fff4c0;
+    transition: 0.3s background-color ease;
 }
-#studies tr:hover{
-    background-color: rgba(211, 211, 211, 0.237);
+
+#studies tr:nth-child(odd) {
+    background-color: #ffffff00;
+    transition: 0.3s background-color ease;
+}
+
+#studies tr:hover {
+    background-color: #ffd5009e;
 }
 
 /* footer ------------------------------------------------- */
@@ -367,12 +403,14 @@ ul.media li a {
     text-decoration: none;
     color: black;
     transition: color 0.3s ease, font-size 0.3s ease;
+    text-decoration-thickness: 2px;
+
 }
 
 .more-info-links:hover {
     text-decoration: underline;
     text-decoration-color: #ffd500;
-    text-decoration-thickness: 2px;
+    text-decoration-thickness: 3px;
     font-size: larger;
 }
 
@@ -391,7 +429,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
-    width: 70%;
+    width: 80%;
     margin: auto;
     min-width: 285px;
 }
@@ -429,7 +467,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     animation: fadeEffect 1s;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    width: 60%;
+    width: 70%;
     margin: auto;
     border: 1px solid #f1f1f1;
     min-width: 250px;
@@ -463,7 +501,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     font-weight: 100;
 }
 
-.course-info-links{
+.course-info-links {
     text-decoration-style: underline;
     text-decoration-color: #ffd500;
     color: black;
@@ -476,4 +514,44 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 
 .subheader-tabcontent {
     margin-top: 50px;
+}
+
+#course-structure {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.clickable-info-box {
+    text-decoration: none;
+}
+
+.course-info-box {
+    width: 175px;
+    margin: 0.6%;
+    border-left: 1px solid #c9c9c9;
+    border-right: 1px solid #c9c9c9;
+    padding: 10px;
+    border-radius: 10px;
+    color: black;
+    transition: 0.1s all ease;
+}
+
+.course-info-box:hover {
+    border-left: 3px solid #ffd500;
+    border-right: 3px solid #ffd500;
+}
+
+.course-info-box-elements {
+    display: flex;
+    justify-content: space-between;
+}
+
+#star-symbol-explainer>i{
+    margin-right: 7px;
+}
+
+#double-angle-symbol-explainer>i{
+    margin-right: 9px;
+    margin-left: 4px;
 }
