--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -329,6 +329,36 @@ nav {
 
 /* footer ------------------------------------------------- */
 /*** Adding Styles to Company Details ***/
+
+.more-info-tabcontent {
+    background-color: #00000008;
+    display: none;
+    padding: 5% 5%;
+    -webkit-animation: fadeEffect 1s;
+    animation: fadeEffect 1s;
+    /* border-bottom-left-radius: 20px; */
+    /* border-bottom-right-radius: 20px; */
+    width: 70%;
+    margin: auto;
+    border-radius: 10px;
+    min-width: 250px;
+}
+
+.more-info-tab {
+    background-color: #00000000;
+    margin: auto;
+    width: fit-content;
+}
+
+.more-info-tab button {
+    cursor: pointer;
+    background-color: #00000017;
+    border: 1px;
+    border-radius: 5px;
+}
+
+
+
 .moreInfo {
     overflow: hidden;
     padding: 3em 0em;
@@ -595,7 +625,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     margin: 10px;
 }
 
-#course-glance-container{
+#course-glance-container {
     display: flex;
     flex-wrap: flex;
     border: 1px solid #ccc;
@@ -605,17 +635,18 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     color: black;
     transition: 0.3s background-color ease;
 }
-#course-glance-container:hover{
-background-color: #ffde74;
+
+#course-glance-container:hover {
+    background-color: #ffde74;
 }
 
 #course-glance-points>p {
     margin: 10px;
     margin-right: 15px;
-    margin-left: 0px;   
+    margin-left: 0px;
 }
 
-#course-glance-points{
+#course-glance-points {
     display: flex;
     flex-wrap: flex;
     margin: 10px;
