--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -186,8 +186,8 @@ nav {
 /* main ----------------------------------------------------- */
 
 #main {
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 5em;
+    margin-right: 5em;
     padding-top: 50px;
 }
 
